--- a/catalog.html
+++ b/catalog.html
@@ -183,13 +183,13 @@
           <li class="pagination__item"> <a class="pagination__link" href="#">2</a> </li>
           <li class="pagination__item"> <a class="pagination__link" href="#">3</a> </li>
           <li class="pagination__item"> <a class="pagination__link" href="#">4</a> </li>
-          <li class="pagination__item"> <a class="pagination__link" href="#">...</a> </li>
+          <li class="pagination__item"> <a class="pagination__link pagination__link--nolink">...</a> </li>
           <li class="pagination__item"> <a class="pagination__link" href="#">10</a> </li>
         </ul>
       </section>
       <section class="inner-subscribe" data-test="subscribe">
         <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
-        <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+        <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
         <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
           <input type="email" name="email" placeholder="Ваш e-mail"><button class="button button--secondary button--subscribe" type="submit">Подписаться</button>
         </form>
