advantages listing updated

--- a/index.html
+++ b/index.html
@@ -65,32 +65,26 @@
           <ul class="advantages__list">
             <li class="advantages__item advantages__item--dark advantages__item--large advantages__item--reverse">
               <img class="advantages__picture" src="images/index/sedona_small_town_800x384.jpg" alt="Настоящий городок Седона" width="800" height="384" loading="lazy">
-              <div class="advantages__content">
+              <div class="advantages__wrapper">
                 <h3 class="advantages__title">Настоящий городок</h3>
                 <p class="advantages__text">Седона &ndash; не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
             </li>
-            <li class="advantages__item">
-              <div class="advantages__content">
-                <h3 class="advantages__title">Небольшая площадь</h3>
-                <p class="advantages__text">Все достопримечательности находятся очень близко</p>
-              </div>
+            <li class="advantages__item advantages__item--wrapper">
+              <h3 class="advantages__title">Небольшая площадь</h3>
+              <p class="advantages__text">Все достопримечательности находятся очень близко</p>
             </li>
-            <li class="advantages__item">
-              <div class="advantages__content">
-                <h3 class="advantages__title">Красивая <br/>дорога</h3>
-                <p class="advantages__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-              </div>
+            <li class="advantages__item advantages__item--wrapper">
+              <h3 class="advantages__title">Красивая <br/>дорога</h3>
+              <p class="advantages__text">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="advantages__item">
-              <div class="advantages__content">
-                <h3 class="advantages__title">Мало <br/>туристов</h3>
-                <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
-              </div>
+            <li class="advantages__item advantages__item--wrapper">
+              <h3 class="advantages__title">Мало <br/>туристов</h3>
+              <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="advantages__item advantages__item--dark advantages__item--large">
               <img class="advantages__picture" src="images/index/devil_bridge_800x384.jpg" alt="Мост через Гранд-Каньон" width="800" height="384" loading="lazy">
-              <div class="advantages__content">
+              <div class="advantages__wrapper">
                 <h3 class="advantages__title">Там есть <br/>мост дьявола</h3>
                 <p class="advantages__text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
@@ -119,7 +113,7 @@
         </section>
         <section class="subscribe" data-test="subscribe">
           <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
-          <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <p class="subscribe__text">Только полезная информация и никакого спама, честное бойскаутское!</p>
           <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
             <input type="email" name="email" placeholder="Ваш e-mail"><button class="button button--secondary button--subscribe" type="submit">Подписаться</button>
           </form>
