--- a/9/catalog.html
+++ b/9/catalog.html
@@ -178,7 +178,13 @@
             <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 4000 ₽</span>
             <a class="button button--primary product-card__button product-card__button--primary" href="#">Подробнее</a>
             <button class="button button--secondary product-card__button product-card__button--secondary" type="button">В избранное</button>
-            <div class="product-card__stars"></div>
+            <div class="product-card__stars">
+              <span class="product-card__star"></span>
+              <span class="product-card__star"></span>
+              <span class="product-card__star"></span>
+              <span class="product-card__star"></span>
+              <span class="visually-hidden">4 звезды</span>
+            </div>
             <div class="button product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">8,5</span></div>
           </li>
           <li class="product-card">
@@ -187,7 +193,13 @@
             <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 5000 ₽</span>
             <a class="button button--primary product-card__button product-card__button--primary" href="#">Подробнее</a>
             <button class="button button--secondary product-card__button product-card__button--secondary product-card__button--secondary-favorite" type="button">В избранном</button>
-            <div class="product-card__stars"></div>
+            <div class="product-card__stars">
+              <span class="product-card__star"></span>
+              <span class="product-card__star"></span>
+              <span class="product-card__star"></span>
+              <span class="product-card__star"></span>
+              <span class="visually-hidden">4 звезды</span>
+            </div>
             <div class="button product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">9,2</span></div>
           </li>
           <li class="product-card">
@@ -196,7 +208,12 @@
             <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 2500 ₽</span>
             <a class="button button--primary product-card__button product-card__button--primary" href="#">Подробнее</a>
               <button class="button button--secondary product-card__button product-card__button--secondary" type="button">В избранное</button>
-              <div class="product-card__stars"></div>
+              <div class="product-card__stars">
+                <span class="product-card__star"></span>
+                <span class="product-card__star"></span>
+                <span class="product-card__star"></span>
+                <span class="visually-hidden">3 звезды</span>
+              </div>
               <div class="button product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">6,9</span></div>
           </li>
           <li class="product-card">
@@ -205,7 +222,11 @@
             <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 1500 ₽</span>
              <a class="button button--primary product-card__button product-card__button--primary" href="#">Подробнее</a>
               <button class="button button--secondary product-card__button product-card__button--secondary" type="button">В избранное</button>
-              <div class="product-card__stars"></div>
+              <div class="product-card__stars">
+                <span class="product-card__star"></span>
+                <span class="product-card__star"></span>
+                <span class="visually-hidden">2 звезды</span>
+              </div>
               <div class="button product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">5,0</span></div>
           </li>
         </ol>
