--- a/9/index.html
+++ b/9/index.html
@@ -96,7 +96,7 @@
               <h3 class="advantages__title">Жильё</h3>
               <p class="advantages__text">Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
-            <li class="advantages__item advantages__item--light advantages__item--food">
+            <li class="advantages__item advantages__item--food">
               <h3 class="advantages__title">Еда</h3>
               <p class="advantages__text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
