--- a/catalog.html
+++ b/catalog.html
@@ -63,7 +63,7 @@
               </svg>
             </a>
           </li>
-          <li class="breadcrumbs__item"> <a class="breadcrumbs__link" href="catalog.html">Каталог</a> </li>
+          <li class="breadcrumbs__item"> <a class="breadcrumbs__link" href="catalog.html">Гостиницы</a> </li>
         </ul>
         <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
           <fieldset class="catalog-filter__group">
@@ -93,7 +93,7 @@
             </ul>
           </fieldset>
           <fieldset class="catalog-filter__group">
-            <legend class="catalog-filter__title">Тип жилья:</legend>
+            <legend class="catalog-filter__title">Тип Жилья:</legend>
             <ul class="catalog-filter__list catalog-filter__list--radio">
               <li class="catalog-filter__item">
                 <label class="control" tabindex="0">
@@ -127,7 +127,7 @@
             </div>
             <div class="catalog-filter__range">
               <div class="catalog-filter__range-scale">
-                <div class="catalog-filter__range-bar" style="left: 0px; width: 186px">
+                <div class="catalog-filter__range-bar" style="left: 0px; width: 207px">
                   <button type="button" class="catalog-filter__range-toggle catalog-filter__range-toggle--toggle-min">
                     <span class="visually-hidden">Изменить минимальную цену.</span>
                   </button>
