--- a/catalog.html
+++ b/catalog.html
@@ -151,9 +151,9 @@
             <output name="count-hotels-number">38</output>
           </p>
           <select class="select-control" aria-label="Сортировка">
-            <option value="popular">Сначала дешёвое</option>
-            <option value="cheap">Сначала популярное</option>
-            <option value="expensive">Сначала дорогое</option>
+            <option value="popular">Сначала дешёвые</option>
+            <option value="cheap">Сначала популярные</option>
+            <option value="expensive">Сначала дорогые</option>
           </select>
           <div class="catalog-products__button-container">
             <a href="#" class="catalog-products__button catalog-products__button--active">
