missed word added

--- a/catalog.html
+++ b/catalog.html
@@ -217,7 +217,7 @@
           </li>
           <li class="product-card">
             <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/greentree_inn_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Свет над ночным небом Гранд=Каньона">
-              <h3 class="product-card__title">GreenTree</h3> </a>
+              <h3 class="product-card__title">GreenTree Inn</h3> </a>
             <span class="product-card__type">Гостиница</span> <span class="product-card__price">От 1500 ₽</span>
              <a class="button button--primary product-card__button product-card__button--primary" href="#">Подробнее</a>
               <button class="button button--secondary product-card__button product-card__button--secondary" type="button">В избранное</button>
