--- a/catalog.html
+++ b/catalog.html
@@ -170,7 +170,7 @@
             </a>
           </div>
         </div>
-        <ol class="product-list">
+        <ul class="product-list">
           <li class="product-card">
             <a class="product-card__link" href="#"> <img class="product-card__image" src="images/catalog/amara_resort_spa_300x212_2x.jpg" width="300" height="212" loading="lazy" alt="Звёздное небо, вид из пещеры">
               <h3 class="product-card__title">Amara Resort & Spa</h3> </a>
@@ -228,7 +228,7 @@
               </div>
               <div class="button product-card__button product-card-button__rating">Рейтинг: <span class="product-card__rating-number">5,0</span></div>
           </li>
-        </ol>
+        </ul>
         <ul class="pagination">
           <li class="pagination__item"> <a class="pagination__link pagination__link--current">1</a> </li>
           <li class="pagination__item"> <a class="pagination__link" href="#">2</a> </li>
@@ -272,7 +272,7 @@
       </section>
       <section class="footer__contacts">
         <h2 class="visually-hidden">Контактный номер</h2>
-        <a class="footer__hotline" href="tel:+7(812) 812-12-12">+7(812) 812-12-12</a>
+        <a class="footer__hotline" href="tel:+7(812)812-12-12">+7 (812) 812-12-12</a>
       </section>
       <section class="footer__production">
         <h2 class="visually-hidden">Сделано в html academy</h2>
