--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
         </section>
         <section class="footer__contacts">
           <h2 class="visually-hidden">Контактный номер</h2>
-          <a class="footer__hotline" href="tel:+7(812) 812-12-12">+7(812) 812-12-12</a>
+          <a class="footer__hotline" href="tel:+7(812)812-12-12">+7 (812) 812-12-12</a>
         </section>
         <section class="footer__production">
           <h2 class="visually-hidden">Сделано в html academy</h2>
@@ -218,12 +218,12 @@
               <div class="popup__amount-row">
                 <label for="children">Дети:
                   <span class="tooltip">
-                    <button class="tooltip__button" type="button">
+                    <span class="tooltip__button" >
                       <svg class="tooltip-img" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="13" cy="13" r="13" fill=""/>
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M12 7H14V9H12V7ZM14 19H12V10H14V19Z" fill="white"/>
                       </svg>
-                    </button>
+                    </span>
                       <span class="tooltip__text">Укажите количество детей, которые будут с вами, возраст которых от 6 до 18 лет. Дети до 6 лет размещаются бесплатно.
                       </span>
                     </span>
@@ -242,7 +242,7 @@
                 </span>
               </div>
             </div>
-            <button type="submit" id="popup-submit-button" class="button button--secondary button--popup-submit">Найти</button>
+            <button type="submit" id="popup-submit-button" class="button button--secondary popup__submit-button">Найти</button>
           </form>
         </div>
       </div>
