--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link type="Image/x-icon" href="images/icons/favicon.svg" rel="icon">
+    <link rel="icon" href="images/icons/favicon.ico" sizes="16x16">
   </head>
   <body>
       <header class="page-header" data-test="header">
