--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </div>
         </section>
         <section class="intro">
-          <h2 class="intro_title">Седона &ndash; небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <h2 class="intro_title">Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</h2>
           <p class="intro__subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </section>
         <section class="advantages" data-test="advantages">
