--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HTML Academy: Каталог</title>
   <link rel="stylesheet" href="styles/styles.css">
-  <link rel="icon" href="images/icons/favicon.ico" sizes="16x16">
+  <link rel="icon" href="favicon.ico" sizes="16x16">
 </head>
 
 <body>
