focus of control fixed

--- a/catalog.html
+++ b/catalog.html
@@ -6,7 +6,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>HTML Academy: Каталог</title>
   <link rel="stylesheet" href="styles/styles.css">
-  <link rel="icon" href="favicon.ico" sizes="16x16">
+  <link rel="icon" href="images/icons/favicon_16x16px.png" sizes="16x16">
 </head>
 
 <body>
@@ -70,21 +70,21 @@
             <legend class="catalog-filter__title">Инфраструктура:</legend>
             <ul class="catalog-filter__list catalog-filter__list--checkbox">
               <li class="catalog-filter__item">
-                <label class="control" tabindex="0">
+                <label class="control">
                   <input class="control__input visually-hidden" type="checkbox" name="swimming-pool" checked>
                   <span class="control__mark"></span>
                   <span class="control__label">Бассейн</span>
                 </label>
               </li>
               <li class="catalog-filter__item">
-                <label class="control" tabindex="0">
+                <label class="control">
                   <input class="control__input visually-hidden" type="checkbox" name="parking" checked>
                   <span class="control__mark"></span>
                   <span class="control__label">Парковка</span>
                 </label>
               </li>
               <li class="catalog-filter__item">
-                <label class="control" tabindex="0">
+                <label class="control">
                   <input class="control__input visually-hidden" type="checkbox" name="wi-fi">
                   <span class="control__mark"></span>
                   <span class="control__label">Wi-Fi</span>
@@ -96,21 +96,21 @@
             <legend class="catalog-filter__title">Тип Жилья:</legend>
             <ul class="catalog-filter__list catalog-filter__list--radio">
               <li class="catalog-filter__item">
-                <label class="control" tabindex="0">
+                <label class="control">
                   <input class="control__input visually-hidden" type="radio" name="product-group" value="hotel" checked>
                   <span class="control__mark"></span>
                   <span class="control__label">Гостиница</span>
                 </label>
               </li>
               <li class="catalog-filter__item">
-                <label class="control" tabindex="0">
+                <label class="control">
                   <input class="control__input visually-hidden" type="radio" name="product-group" value="motel">
                   <span class="control__mark"></span>
                   <span class="control__label">Мотель</span>
                 </label>
               </li>
               <li class="catalog-filter__item">
-                <label class="control" tabindex="0">
+                <label class="control">
                   <input class="control__input visually-hidden" type="radio" name="product-group" value="apartment">
                   <span class="control__mark"></span>
                   <span class="control__label">Апартаменты</span></label>
