object fit updated

--- a/index.html
+++ b/index.html
@@ -64,7 +64,9 @@
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantages__list">
             <li class="advantages__item advantages__item--dark advantages__item--large advantages__item--reverse">
-              <img class="advantages__picture" src="images/index/sedona_small_town_800x384.jpg" alt="Настоящий городок Седона" width="800" height="384" loading="lazy">
+              <div class="advantages__picture-container">
+                <img class="advantages__picture" src="images/index/sedona_small_town_800x384.jpg" alt="Настоящий городок Седона" width="800" height="384" loading="lazy">
+              </div>
               <div class="advantages__wrapper">
                 <h3 class="advantages__title">Настоящий городок</h3>
                 <p class="advantages__text">Седона &ndash; не аттракцион для туристов, там течёт своя жизнь</p>
@@ -83,7 +85,9 @@
               <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="advantages__item advantages__item--dark advantages__item--large">
-              <img class="advantages__picture" src="images/index/devil_bridge_800x384.jpg" alt="Мост через Гранд-Каньон" width="800" height="384" loading="lazy">
+              <div class="advantages__picture-container">
+                <img class="advantages__picture" src="images/index/devil_bridge_800x384.jpg" alt="Мост через Гранд-Каньон" width="800" height="384" loading="lazy">
+              </div>
               <div class="advantages__wrapper">
                 <h3 class="advantages__title">Там есть <br/>мост дьявола</h3>
                 <p class="advantages__text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
