modal event added

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
           <h2 class="search-hotels__title">Заинтересовались?</h2>
           <p class="search-hotels__description">Укажите предполагаемые даты поездки,
             <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a href="catalog.html" class="button button--primary button--search-hotels">Поиск гостиницы в Седоне</a>
+            <button type="button" class="button button--primary button--search-hotels">Поиск гостиницы в Седоне</button>
         </section>
         <section class="subscribe" data-test="subscribe">
           <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
@@ -250,5 +250,6 @@
           </form>
         </div>
       </div>
+      <script src="js/script.js"></script>
 </body>
 </html>
