:heavy_check_mark: Сборка #10

--- a/10/index.html
+++ b/10/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="images/icons/favicon.ico" sizes="16x16">
+    <link rel="icon" href="images/icons/favicon_16x16px.png" sizes="16x16">
     <base href="https://htmlacademy-htmlcss.github.io/2130957-sedona-35/10/">
 </head>
   <body>
@@ -58,14 +58,16 @@
           </div>
         </section>
         <section class="intro">
-          <h2 class="intro_title">Седона &ndash; небольшой городок в Аризоне, заслуживающий большего!</h2>
+          <h2 class="intro_title">Седона &mdash; небольшой городок в Аризоне, заслуживающий большего!</h2>
           <p class="intro__subtitle">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
         </section>
         <section class="advantages" data-test="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantages__list">
             <li class="advantages__item advantages__item--dark advantages__item--large advantages__item--reverse">
-              <img class="advantages__picture" src="images/index/sedona_small_town_800x384.jpg" alt="Настоящий городок Седона" width="800" height="384" loading="lazy">
+              <div class="advantages__picture-container">
+                <img class="advantages__picture" src="images/index/sedona_small_town_800x384.jpg" alt="Настоящий городок Седона" width="800" height="384" loading="lazy">
+              </div>
               <div class="advantages__wrapper">
                 <h3 class="advantages__title">Настоящий городок</h3>
                 <p class="advantages__text">Седона &ndash; не аттракцион для туристов, там течёт своя жизнь</p>
@@ -84,7 +86,9 @@
               <p class="advantages__text">Большинство едет в Гранд Каньон и толпится там</p>
             </li>
             <li class="advantages__item advantages__item--dark advantages__item--large">
-              <img class="advantages__picture" src="images/index/devil_bridge_800x384.jpg" alt="Мост через Гранд-Каньон" width="800" height="384" loading="lazy">
+              <div class="advantages__picture-container">
+                <img class="advantages__picture" src="images/index/devil_bridge_800x384.jpg" alt="Мост через Гранд-Каньон" width="800" height="384" loading="lazy">
+              </div>
               <div class="advantages__wrapper">
                 <h3 class="advantages__title">Там есть <br/>мост дьявола</h3>
                 <p class="advantages__text">Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
@@ -98,7 +102,7 @@
             </li>
             <li class="advantages__item advantages__item--food">
               <h3 class="advantages__title">Еда</h3>
-              <p class="advantages__text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              <p class="advantages__text">Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
             <li class="advantages__item advantages__item--souvenir">
               <h3 class="advantages__title">Сувениры</h3>
@@ -110,7 +114,7 @@
           <h2 class="search-hotels__title">Заинтересовались?</h2>
           <p class="search-hotels__description">Укажите предполагаемые даты поездки,
             <br> и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-            <a href="catalog.html" class="button button--primary button--search-hotels">Поиск гостиницы в Седоне</a>
+            <button type="button" class="button button--primary button--search-hotels">Поиск гостиницы в Седоне</button>
         </section>
         <section class="subscribe" data-test="subscribe">
           <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
@@ -247,5 +251,6 @@
           </form>
         </div>
       </div>
+      <script src="js/script.js"></script>
 </body>
 </html>
