updates according autotest

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <section class="advantages" data-test="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantages__list">
-            <li class="advantages__item advantages__item--dark advantages__item--large advantages__item--reverse">
+            <li class="advantages__item advantages__item--large advantages__item--dark advantages__item--reverse">
               <div class="advantages__picture-container">
                 <img class="advantages__picture" src="images/index/sedona_small_town_800x384.jpg" alt="Настоящий городок Седона" width="800" height="384" loading="lazy">
               </div>
