:heavy_check_mark: Сборка #master

--- a/master/index.html
+++ b/master/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HTML Academy: Седона</title>
     <link rel="stylesheet" href="styles/styles.css">
-    <link rel="icon" href="images/icons/favicon_16x16px.png" sizes="16x16">
+    <link rel="icon" href="images/icons/favicon_32x32px.png" sizes="32x32">
     <base href="https://htmlacademy-htmlcss.github.io/2130957-sedona-35/master/">
 </head>
   <body>
@@ -64,7 +64,7 @@
         <section class="advantages" data-test="advantages">
           <h2 class="visually-hidden">Преимущества</h2>
           <ul class="advantages__list">
-            <li class="advantages__item advantages__item--dark advantages__item--large advantages__item--reverse">
+            <li class="advantages__item advantages__item--large advantages__item--dark advantages__item--reverse">
               <div class="advantages__picture-container">
                 <img class="advantages__picture" src="images/index/sedona_small_town_800x384.jpg" alt="Настоящий городок Седона" width="800" height="384" loading="lazy">
               </div>
