focus added to tooltip

--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
               <div class="popup__amount-row">
                 <label for="children">Дети:
                   <span class="tooltip">
-                    <span class="tooltip__button" >
+                    <span class="tooltip__button" tabindex="0">
                       <svg class="tooltip-img" width="26" height="26" viewBox="0 0 26 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <circle cx="13" cy="13" r="13" fill=""/>
                         <path fill-rule="evenodd" clip-rule="evenodd" d="M12 7H14V9H12V7ZM14 19H12V10H14V19Z" fill="white"/>
